--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section aria-label="navbar">
         <nav class="navbar-container">
           <div>
-            <img src="/Logo.png" alt="brand-logo" />
+            <img src="./Logo.png" alt="brand-logo" />
           </div>
           <div>
             <ul class="list">
@@ -70,18 +70,18 @@
           <!-- Patterns -->
           <!-- ---------------- -->
           <span class="square">
-            <img src="/squares.png" alt="square-pattern" />
+            <img src="./squares.png" alt="square-pattern" />
           </span>
           <!-- Star -->
           <span class="star">
-            <img src="/start.png" alt="start-pattern" />
+            <img src="./start.png" alt="start-pattern" />
           </span>
           <!-- Globe -->
           <span class="globe">
-            <img src="/globe.png" alt="globe-pattern" />
+            <img src="./globe.png" alt="globe-pattern" />
           </span>
           <div class="person" >
-            <img src="/Image.png" alt="person-hero-iamge" />
+            <img src="./Image.png" alt="person-hero-iamge" />
           </div>
           <div class="hero-container-right">
             <h1 class="hero-heading">What’s Trend in 2025 ?</h1>
@@ -99,16 +99,16 @@
               <h4 class="contact-heading">Contact us</h4>
               <div class="icons">
                 <span>
-                  <img src="/Group.png" alt="facebook-icon" />
+                  <img src="./Group.png" alt="facebook-icon" />
                 </span>
                 <span>
-                  <img src="/Group (1).png" alt="messenger-icon" />
+                  <img src="./Group (1).png" alt="messenger-icon" />
                 </span>
                 <span>
-                  <img src="/Group (2).png" alt="instagram-icon" />
+                  <img src="./Group (2).png" alt="instagram-icon" />
                 </span>
                 <span>
-                  <img src="/Group (3).png" alt="whatsapp-icon" />
+                  <img src="./Group (3).png" alt="whatsapp-icon" />
                 </span>
               </div>
             </div>
